# logux

./: .gitignore  Cargo.toml  LICENSE  README.md  README_EN.md  pyproject.toml
docs/: idea.md
examples/: rules.yaml
logux/: __init__.py  __main__.py
logux/adb/: client.py
logux/cli/: commands.py  completer.py  shell.py
logux/config/: presets.py
logux/logs/: filters.py  formatter.py  parser.py  stream.py
logux/mock/: rules.py
logux/traffic/: proxy.py
mocks/: profile_123.json
src/: main.rs
src/adb/: mod.rs
src/cli/: commands.rs  completer.rs  mod.rs  shell.rs  tui.rs
src/config/: mod.rs
src/logs/: filters.rs  formatter.rs  mod.rs  parser.rs
src/mock/: mod.rs
src/traffic/: mod.rs
tests/: test_adb.py  test_filters.py  test_formatter.py  test_mock_rules.py  test_parser.py
