[package]
name = "logux"
version = "2.0.0"
edition = "2021"
description = "Android Logs & Traffic CLI — real-time logcat viewer with filtering, presets, traffic inspection, and mock rules"
license = "MIT"
authors = ["ThothLab"]
readme = "README.md"
repository = "https://github.com/thothlab/logux"

[[bin]]
name = "logux"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
crossterm = "0.28"
rustyline = { version = "14", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"
chrono = "0.4"
dirs = "6"
notify = "7"
colored = "3"

[dev-dependencies]
tempfile = "3"
